added education section

--- a/app/main.html
+++ b/app/main.html
@@ -302,7 +302,7 @@
                                         </div>
                                         <div class="profile-content timeline-content right">
                                             <label>Availability</label>
-                                            <div class="value">Available for Full-Time</div>
+                                            <div class="value">Full-Time</div>
                                         </div>
 
                                     </div>
@@ -317,62 +317,63 @@
                                             <i class="fa fa-code"></i>
                                             <span>Coding</span>
                                         </li>
-                                        <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                            <i class="fa fa-cutlery"></i>
-                                            <span>Foods</span>
-                                        </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.3s">
                                             <i class="fa fa-graduation-cap"></i>
-                                            <span>Science</span>
+                                            <span>Learning</span>
                                         </li>
+                                        <li class="wow bounceInDown" data-wow-delay="0.2s">
+                                            <i class="fa fa-book"></i>
+                                            <span>Reading</span>
+                                        </li>
+
                                         <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                            <i class="fa fa-leaf"></i>
-                                            <span>Nature</span>
+                                            <i class="fa fa-pencil"></i>
+                                            <span>Designing</span>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="interests-row big">
                                     <ul>
                                         <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                            <i class="fa fa-music"></i>
-                                            <span>Music</span>
+                                            <i class="fa fa-bug"></i>
+                                            <span>TDD</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.6s">
-                                            <i class="fa fa-plane"></i>
-                                            <span>Travel</span>
+                                            <i class="fa fa-html5"></i>
+                                            <span>HTML5</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                            <i class="fa fa-pencil"></i>
-                                            <span>Writing</span>
+                                            <i class="fa fa-css3"></i>
+                                            <span>CSS3</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                            <i class="fa fa-coffee"></i>
-                                            <span>Coffee</span>
+                                            <i class="fa fa-codepen"></i>
+                                            <span>AngularJS</span>
                                         </li>
                                     </ul>
                                 </div>
 
 
                                 <div class="title wow fadeIn"  >
-                                    <h1>hobbies & interests</h1>
+                                    <h1>skills & interests</h1>
                                 </div>
                                 <div class="interests-row big">
                                     <ul>
                                         <li class="wow bounceInDown" data-wow-delay="0.1s">
-                                            <i class="fa fa-rocket"></i>
-                                            <span>Space</span>
+                                            <i class="fa fa-bitcoin"></i>
+                                            <span>Bitcoin</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.2s">
-                                            <i class="fa fa-road"></i>
-                                            <span>road Trip</span>
+                                            <i class="fa fa-circle-o-notch"></i>
+                                            <span>Blockchain</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.3s">
-                                            <i class="fa fa-paw"></i>
-                                            <span>dogs</span>
+                                            <i class="fa fa-suitcase"></i>
+                                            <span>Agile</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                            <i class="fa fa-paint-brush"></i>
-                                            <span>art</span>
+                                            <i class="fa fa-desktop"></i>
+                                            <span>UI/UX</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -380,20 +381,20 @@
                                 <div class="interests-row medium">
                                     <ul>
                                         <li class="wow bounceInDown" data-wow-delay="0.5s">
-                                            <i class="fa fa-music"></i>
-                                            <span>Music</span>
+                                            <i class="fa fa-codepen"></i>
+                                            <span>Languages</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.6s">
-                                            <i class="fa fa-plane"></i>
-                                            <span>Travel</span>
+                                            <i class="fa fa-database"></i>
+                                            <span>Database</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.7s">
-                                            <i class="fa fa-pencil"></i>
-                                            <span>Writing</span>
+                                            <i class="fa fa-check-square-o"></i>
+                                            <span>Goals</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
-                                            <i class="fa fa-coffee"></i>
-                                            <span>Coffee</span>
+                                            <i class="fa fa-arrow-circle-o-up"></i>
+                                            <span>Challenges</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -434,9 +435,10 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                Vivamus <strong>laoreet</strong> dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                                Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                                GPA 4.0.
+                                                Participated in in Project Management, Design and Programming projects.
+                                                Developed Java applications.
+                                                Wrote min 500 words of academic content per day.
 
                                             </p>
                                         </div>
@@ -447,16 +449,20 @@
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt.
-                                                Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                                Designing a Database Strategy
+                                                Designing Database Tables
+                                                Designing Programming Objects
+                                                Designing a Transaction and Concurrency Strategy
+                                                Designing an XML Strategy
+                                                Designing Queries for Performance
+                                                Designing a Database for Optimal Performance
 
                                             </p>
 
                                         </div>
                                         <div class="event-title right">
-                                            <h1>graphic design</h1>
-                                            <h4>izmir university</h4>
+                                            <h1>Microsoft® Certified IT Professional (MCITP)</h1>
+                                            <h4>PRO: Designing Database Solutions and Data Access Using Microsoft SQL Server 2008, License C256-3770</h4>
                                         </div>
 
 
@@ -468,13 +474,19 @@
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
-                                            <h1>webdesign master</h1>
-                                            <h4>ankara university</h4>
+                                            <h1>Microsoft® Certified Technology Specialist (MCTS)</h1>
+                                            <h4>TS: Microsoft SQL Server 2008, Database Development, License C256-3771</h4>
                                         </div>
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet dolor metus, eu ullamcorper turpis ornare tincidunt. Vivamus tristique rhoncus enim. Curabitur varius est quis sollicitudin volutpat.
+                                                Implementing tables and views
+                                                Implementing programming objects
+                                                Working with query fundamentals
+                                                Applying additional query techniques
+                                                Working with additional SQL Server components
+                                                Working with XML data
+                                                Gathering performance information
                                             </p>
 
                                         </div>
