fixed css and js references

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="robots" content="all">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700,800,400,600' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/prettyPhoto.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="app/assets/css/prettyPhoto.css">
+    <link rel="stylesheet" href="app/assets/css/animate.css">
 
-    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="app/assets/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="app/assets/css/stylesheet.css">
 
 
 
@@ -33,9 +33,9 @@
     <div class="container">
         <header id="home">
 
-            <div class="head-image bg-image" data-bg-image="assets/images/background-image.png">
+            <div class="head-image bg-image" data-bg-image="app/assets/images/background-image.png">
                 <div class="avatar wow bounceInDown" >
-                    <img alt="avatar" src="assets/images/ivana.png" />
+                    <img alt="avatar" src="app/assets/images/ivana.png" />
                 </div>
             </div>
 
@@ -853,8 +853,8 @@
 
                                 <div id="portfolio-grid" class="row">
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item illustration ">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work01.jpg">
-                                            <img alt="" src="assets/images/portfolio/work01.jpg"   />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work01.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work01.jpg"   />
                                         </a>
                                         <div class="holder">
                                             <div class="paper  has-shadow title">
@@ -874,8 +874,8 @@
 
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item advertisement">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work02.jpg">
-                                            <img alt="" src="assets/images/portfolio/work02.jpg"   />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work02.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work02.jpg"   />
                                         </a>
                                         <div class="holder">
                                             <div class="paper  has-shadow title">
@@ -896,8 +896,8 @@
 
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item branding">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work04.jpg">
-                                            <img alt="" src="assets/images/portfolio/work04.jpg"   />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work04.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work04.jpg"   />
                                         </a>
 
                                         <div class="holder">
@@ -917,8 +917,8 @@
                                     </figure>
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item advertisement web">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work03.jpg">
-                                            <img alt="" src="assets/images/portfolio/work03.jpg"   />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work03.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work03.jpg"   />
                                         </a>
                                         <div class="holder">
                                             <div class="paper  has-shadow title">
@@ -936,8 +936,8 @@
                                         </div>
                                     </figure>
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item branding">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work05.jpg">
-                                            <img alt="" src="assets/images/portfolio/work05.jpg"   />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work05.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work05.jpg"   />
                                         </a>
                                         <div class="holder">
                                             <div class="paper  has-shadow title">
@@ -956,8 +956,8 @@
                                     </figure>
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item branding">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/work06.jpg">
-                                            <img alt="" src="assets/images/portfolio/work06.jpg"  />
+                                        <a data-rel="prettyphoto" href="app/assets/images/portfolio/work06.jpg">
+                                            <img alt="" src="app/assets/images/portfolio/work06.jpg"  />
                                         </a>
                                         <div class="holder">
                                             <div class="paper  has-shadow title">
@@ -1005,7 +1005,7 @@
                                         <div class="date">
                                             08 Apr 2014
                                         </div>
-                                        <img alt="" src="assets/images/blog/img01.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img01.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1030,7 +1030,7 @@
                                         <div class="date ">
                                             15 Sep 2014
                                         </div>
-                                        <img alt="" src="assets/images/blog/img02.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img02.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1057,7 +1057,7 @@
                                         <div class="date ">
                                             01 July 2014
                                         </div>
-                                        <img alt="" src="assets/images/blog/img03.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img03.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1084,7 +1084,7 @@
                                         <div class="date">
                                             05 June 2014
                                         </div>
-                                        <img alt="" src="assets/images/blog/img04.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img04.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1112,7 +1112,7 @@
                                             25 Nov 2014
 
                                         </div>
-                                        <img alt="" src="assets/images/blog/img05.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img05.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1141,7 +1141,7 @@
                                             10 Aug 2014
 
                                         </div>
-                                        <img alt="" src="assets/images/blog/img06.jpg" />
+                                        <img alt="" src="app/assets/images/blog/img06.jpg" />
                                     </div>
                                     <div class="info-area">
 
@@ -1249,7 +1249,7 @@
                                             <input class="submit  le-btn big" type="submit" value="send" />
                                         </div>
                                         <div id="loading" class="pull-right">
-                                            <img alt="" src="assets/images/loader.gif" />
+                                            <img alt="" src="app/assets/images/loader.gif" />
                                         </div>
                                     </div>
 
@@ -1326,24 +1326,24 @@
 <a class="goto-top" href="#gotop"></a>
 
 
-<script src="assets/js/jquery-1.11.1.min.js"></script>
-<script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
+<script src="app/assets/js/jquery-1.11.1.min.js"></script>
+<script src="app/assets/js/jquery-migrate-1.2.1.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script type="text/javascript" src="assets/js/css_browser_selector.js"></script>
+<script type="text/javascript" src="app/assets/js/css_browser_selector.js"></script>
 
-<!--<script type="text/javascript" src="assets/js/jquery.easing-1.3.js"></script>-->
+<!--<script type="text/javascript" src="app/assets/js/jquery.easing-1.3.js"></script>-->
 
-<script type="text/javascript" src="assets/js/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="assets/js/jquery.validate.js"></script>
-<script type="text/javascript" src="assets/js/jquery.address-1.5.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.circliful.min.js"></script>
-<script type="text/javascript" src="assets/js/wow.min.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.validate.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.address-1.5.min.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.isotope.min.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.circliful.min.js"></script>
+<script type="text/javascript" src="app/assets/js/wow.min.js"></script>
 
-<script type="text/javascript" src="assets/js/jquery.circliful.min.js"></script>
+<script type="text/javascript" src="app/assets/js/jquery.circliful.min.js"></script>
 
-<script type="text/javascript" src="assets/js/script.js"></script>
+<script type="text/javascript" src="app/assets/js/script.js"></script>
 
 <script src="appConfig.js"></script>
 <script src="bower_components/requirejs/require.js" data-main="main.js"></script>
