moved blog posts to root

--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
                                             </p>
                                         </div>
 
-                                        <a class="le-btn" href="app/components/blogPost/evolution-of-electronic-payment-systems.html">readmore</a>
+                                        <a class="le-btn" href="evolution-of-electronic-payment-systems.html">readmore</a>
                                     </div>
 
 
@@ -1149,7 +1149,7 @@
                                             </p>
                                         </div>
 
-                                        <a class="le-btn" href="app/components/blogPost/inbound-marketing.html">readmore</a>
+                                        <a class="le-btn" href="inbound-marketing.html">readmore</a>
 
                                     </div>
 
